# notifyme

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: error.rs  main.rs
src/app/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/editor/: mod.rs
src/executor/: mod.rs
src/notifications/: email.rs  lark.rs  mod.rs  telegram.rs
tests/: config_tests.rs  test-config.toml.template
