[package]
name = "notifyme"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-value = "0.7"
quick-xml = { version = "0.27.1", features = ["serialize"] }
lettre = { version = "0.10.0-rc.3", features = ["smtp-transport", "builder"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
libc = "0.2"
lazy_static = "1.4.0"
chrono = "0.4"
async-trait = "0.1"

[dev-dependencies]
once_cell = "1.18"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
